# pipelinemodel

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.cursor/rules/: etlantic.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: checks.yml  external-plugin-echo.yml  release.yml
docs/: PIPELANTIC_MANIFESTO.md  PIPELINEMODEL_MANIFESTO.md  README.md  requirements.txt
docs/01_GETTING_STARTED/: BEST_PRACTICES.md  CAPABILITIES.md  COMPARE.md  COOKBOOK.md  CURRENT_VERSION.md  ENGINE_SELECTION.md  EVALUATOR.md  FAQ.md  FIRST_PIPELINE.md  INSTALLATION.md  INTERCHANGE_GATE_A_FAQ.md  PORTABLE_FAILURE_COOKBOOK.md  PORTABLE_VS_NATIVE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UPGRADE.md  WHATS_NEW_0_14.md  WHATS_NEW_0_15.md  WHATS_NEW_0_16.md  WHATS_NEW_0_17.md  WHATS_NEW_0_22.md
docs/02_FOUNDATIONS/: ARCHITECTURE.md  CORE_CONCEPTS.md  DESIGN_PRINCIPLES.md  DOCUMENTATION_STATUS.md  FASTAPI_PHILOSOPHY.md  GLOSSARY.md  README.md  SECURITY.md  VALIDATION_EVERYWHERE.md  VISION.md  WHY_PIPELANTIC.md  WHY_PIPELINEMODEL.md
docs/03_DATA_CONTRACTS/: DATACONTRACTMODEL.md  GENERATION.md  LOADING.md  ODCS.md  PYDANTIC_INTEGRATION.md  README.md  VALIDATION.md  VERSIONING.md
docs/04_TRANSFORMATIONS/: ASYNC.md  CALLBACKS.md  DTCS.md  ERROR_HANDLING.md  IMPLEMENTATIONS.md  INPUTS.md  OUTPUTS.md  PARAMETERS.md  PORTABLE_FUNCTIONS.md  PORTABLE_TRANSFORMATIONS.md  README.md  TRANSFORMATION.md  TYPE_ANNOTATIONS.md
docs/05_PIPELINES/: CONTRACT_GENERATION.md  CONTRACT_LOADING.md  DPCS.md  EXTRACTS.md  LOADS.md  PIPELINE.md  PIPELINE_VALIDATION.md  PLANNING.md  PROFILES.md  PROFILE_PRIMER.md  README.md  SINKS.md  SOURCES.md  STEPS.md  SUBPIPELINES.md
docs/06_EXECUTION/: AIRFLOW.md  AIRFLOW_TUTORIAL.md  CI_INTEGRATION.md  COMPILATION.md  DATAFRAME_PLUGINS.md  DEPLOYMENT.md  DURABLE_REPORTS.md  EXECUTION_MODEL.md  FILE_STORAGE_TUTORIAL.md  LIFECYCLE_EXTENSIONS.md  LOCAL_PYTHON.md  LOGGING.md  OBSERVABILITY_TODAY.md  OPS_PILOT.md  ORCHESTRATION_PLUGINS.md  PANDAS.md  PANDAS_TUTORIAL.md  PILOT_WALKTHROUGH.md  PLUGINS.md  POLARS.md  POLARS_TUTORIAL.md  PRODUCTION_PROFILES.md  PRODUCTION_READINESS.md  PYSPARK.md  PYSPARK_EXECUTION.md  PYSPARK_TUTORIAL.md  README.md  RESOURCE_PLUGINS.md  RUN_REPORTS.md  SECRETS_MANAGEMENT.md  SPARK_OPTIMIZATION.md  SQL.md  SQL_EXECUTION.md  SQL_PUSHDOWN.md  SQL_TUTORIAL.md  STORAGE_PLUGINS.md  STRUCTURED_STREAMING.md
docs/07_PLUGIN_SDK/: BUILDING_A_PLUGIN.md  CAPABILITY_VOCABULARY.md  DATAFRAME_PLUGIN.md  DISTRIBUTION.md  OBSERVABILITY_PROVIDER.md  ORCHESTRATOR_PLUGIN.md  OVERVIEW.md  PORTABLE_TRANSFORM_COMPILER.md  PROTOCOL_EVOLUTION.md  PYSPARK_PLUGIN.md  README.md  RESOURCE_PROVIDER.md  SPARK_PROVIDER.md  SQL_DIALECT.md  SQL_PLUGIN.md  STORAGE_PLUGIN.md  TESTING_PLUGINS.md  THIRD_PARTY_COMPILER_TUTORIAL.md
docs/08_VISUALIZATION/: DOCUMENTATION.md  GRAPHVIZ.md  HTML.md  LINEAGE.md  MERMAID.md  OPENAPI_FOR_PIPELINES.md  README.md
docs/09_EXAMPLES/: 09_EXAMPLES_PYSPARK_TO_SQL.md  AIRFLOW_COMPILE.md  AIRFLOW_PIPELINE.md  ASYNC_PIPELINES.md  CALLBACKS.md  CODE_FIRST.md  CONTRACT_FIRST.md  CONTRACT_FIRST_TUTORIAL.md  CSV_TO_CSV.md  CSV_TO_SQL.md  END_TO_END.md  MULTI_OUTPUT.md  PANDAS_PIPELINE.md  POLARS_PIPELINE.md  PORTABLE_TRANSFORMATION.md  PORTABLE_TRANSFORMS.md  PREFECT_RUN.md  PYSPARK_TO_DELTA.md  PYSPARK_TO_SQL.md  README.md  SPARKFORGE_ADAPTER.md  SQL_TO_PYSPARK.md  SQL_TO_SQL.md  STREAMING_PYSPARK.md
docs/10_REFERENCE/: API_REFERENCE.md  CLI.md  COMPATIBILITY.md  CONFIGURATION.md  CONFIGURATION_TODAY.md  DIAGNOSTICS.md  ENVIRONMENT_VARIABLES.md  EXCEPTIONS.md  KNOWN_ISSUES.md  OPTIONAL_PACKAGES.md  PORTABLE_COMPILER_MATRIX.md  README.md  RUNTIME_CONFIGURATION.md  SURFACE_INVENTORY.md
docs/11_DEVELOPMENT/: ARCHITECTURE_DECISIONS.md  BENCHMARKS.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEPENDENCY_STRATEGY.md  DEPRECATION_POLICY.md  DESIGN_DECISIONS.md  DOCUMENTATION.md  DOCUMENTATION_AUDIT_0_21.md  DTCS_3_0_SPEC_PROPOSAL.md  DTCS_PORTABLE_EVOLUTION.md  EXIT_GATE_0_22.md  INTEROPERABILITY_FOUNDATION_PLAN.md  MIGRATION_0_12_TO_0_13.md  MIGRATION_0_13_TO_0_14.md  MIGRATION_0_14_TO_0_15.md  MIGRATION_0_15_TO_0_16.md  MIGRATION_0_16_TO_0_17.md  MIGRATION_0_21_TO_0_22.md  MIGRATION_0_7_TO_0_8.md  PORTABLE_TRANSFORM_PLAN.md  PREFECT_SPIKE_NOTES.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  ROADMAP_SUMMARY.md  SCHEDULER_AND_PREFECT_PLAN.md  SPARKFORGE_ADOPTION.md  SUPPORT.md  TESTING.md
docs/specifications/: DPCS_SPEC.md  DTCS_SPEC.md  README.md
docs/theme/: README.md
examples/: README.md  airflow_compile.py  file_storage.py  memory_customers.py  portable_pandas_kernel.py  portable_polars_kernel.py  portable_wave17.py  prefect_run.py  quickstart.py
scripts/: check_docs.py  check_release.py  check_runnable_docs.py  check_surface_inventory.py  check_transform_compiler_drift.py
src/etlantic/: __init__.py  __init__.pyi  __main__.py  agents.py  capabilities.py  pipeline.py  plugin_compatibility.py  plugin_trust.py  profile.py  protocol_meta.py  registry.py  schema_history.py  schema_policy.py
src/pipelantic/: __init__.py  contracts.py  diagnostics.py  exceptions.py  identity.py  inspection.py  mermaid.py  model.py  pipeline.py  ports.py  refs.py  transformation.py  validation.py
src/pipelinemodel/: pipeline.py  transformation.py  validation.py
tests/: test_examples.py
tests/airflow/: test_airflow_compile.py
tests/cli/: test_cli.py
tests/dataframe/: test_correctness.py
tests/fixtures/: sample_pipeline.py
tests/interchange/: test_regression_p0_2.py
tests/model/: test_acceptance.py
tests/orchestration/: test_orchestration.py
tests/plan/: test_serialize.py
tests/polars_compiler/: test_lowering.py  test_parity_fixes.py
tests/portable_conformance/: test_public_suite.py
tests/portable_differential/: test_sql_polars.py
tests/prefect/: test_prefect_scheduler.py
tests/profile/: test_profile.py
tests/reports/: test_reports.py
(+126 files in other folders)
