[project]
name = "pipelantic"
version = "0.1.0"
description = "Typed, contract-driven data pipeline modeling for Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Odo Matthews", email = "odosmatthews@gmail.com" }]
keywords = ["pipelines", "etl", "data-contracts", "typed", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "contractmodel>=0.1.2",
    "pydantic>=2.12,<3",
    "packaging>=24",
]

[project.urls]
Homepage = "https://github.com/eddiethedean/pipelantic"
Documentation = "https://github.com/eddiethedean/pipelantic/tree/main/docs"
Repository = "https://github.com/eddiethedean/pipelantic"
Issues = "https://github.com/eddiethedean/pipelantic/issues"
Changelog = "https://github.com/eddiethedean/pipelantic/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
    "mkdocstrings[python]>=0.29,<1",
    "pymdown-extensions>=10.14,<11",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipelantic"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/pipelantic",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/pyproject.toml",
]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["pipelantic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
